metadata/force-app/main/default/objects/CustomName_XKwYv__c/CustomName_XKwYv__c.object-meta.xml
<CustomObject>
    <description>Description_YRBlQ</description>
    <label>CustomLabel_CcrsT</label>
    <nameField>
        <label>CustomLabel_CcrsT</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_CcrsTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>