metadata/force-app/main/default/objects/CustomName_XKwYv__c/fields/CustomField_PlPxh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PlPxh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldSZwdJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>